--- a/src/index.css
+++ b/src/index.css
@@ -33,28 +33,79 @@ main {
 	padding: 0;
 }
 
+/* Aside */
+
 aside {
-	border: 1px solid black;
+	flex-direction: column;
+	align-items: center;
 	width: 30%;
 	background-color: var(--secondaryColor);
+}
+
+aside form {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 1.5rem;
+}
+
+aside form input {
+	height: 2.5rem;
+	padding: 0.25rem;
+	font-size: 1.3rem;
+}
+
+aside form button {
+	border: none;
+	background: none;
+	font-size: 2.5rem;
+}
+
+aside .current {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
+}
+
+aside .current span {
+	font-size: 5rem;
+}
+
+aside .current h1 {
+	font-size: 5rem;
+}
+
+aside .current .day {
+	font-size: 2rem;
+	font-weight: 700;
+}
+
+aside .current div > * {
+	margin: 0.5rem 0;
+	font-weight: 500;
+	font-size: 1.2rem;
 }
 
 main {
 	justify-content: space-evenly;
 	align-items: center;
-	border: 1px solid black;
 	width: 70%;
 	display: flex;
 	padding: 0 10%;
 	flex-direction: column;
 	background-color: var(--primaryColor);
+	height: 100vh;
 }
 /* Weather Week */
 .weather-week {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	/* border: 1px solid black; */
 	width: 100%;
 }
 
@@ -66,12 +117,13 @@ main {
 	align-items: center;
 	text-align: center;
 	width: 100px;
-	border: 1px solid black;
+	height: 150px;
 	background-color: var(--secondaryColor);
+	font-weight: 500;
 }
 
-.card > * {
-	margin: 0.5rem 0;
+.card p {
+	font-size: 2rem;
 }
 
 /* Weather Today */
@@ -81,15 +133,20 @@ main {
 }
 .weather-today .grid {
 	display: grid;
+	height: 100%;
 	grid-template-columns: repeat(2, 1fr);
 	align-items: center;
 	justify-content: center;
-	gap: 2rem;
+	gap: 1rem;
 	margin: 1rem 0;
 }
 
 .weather-today .grid .card {
 	width: 100%;
-	height: fit-content;
+	height: 100%;
 	margin: 0 auto;
+}
+
+.weather-today .grid .card p {
+	font-size: 4rem;
 }
