--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@ aside form {
 
 aside form input {
 	height: 2.5rem;
+	border: 1px solid white;
+	width: 90%;
 	padding: 0.25rem;
 	font-size: 1.3rem;
 }
@@ -60,6 +62,7 @@ aside form button {
 	border: none;
 	background: none;
 	font-size: 2.5rem;
+	margin: 0 0.25rem;
 }
 
 aside .current {
