--- a/src/index.css
+++ b/src/index.css
@@ -1,183 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-:root {
-	/* Main Bg */
-	--primaryColor: #100e1d;
-	/* Aside Bg and Card Bg */
-	--secondaryColor: #1e213a;
-	/* Input Bg */
-	--grey: #6e707a;
-	/* C Temp */
-	--white: #e7e7eb;
-	/* F Temp  */
-	--temp: #585676;
-}
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	font-family: 'Raleway', sans-serif;
-	color: var(--white);
-}
-.app,
-aside,
-main {
-	display: flex;
-	min-height: fit-content;
-	height: 100vh;
-	margin: 0;
-	padding: 0;
-}
-
-/* Aside */
-
-aside {
-	flex-direction: column;
-	align-items: center;
-	width: 30%;
-	background-color: var(--secondaryColor);
-}
-
-aside form {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	padding: 1.5rem;
-}
-
-aside form input {
-	height: 2.5rem;
-	border: 1px solid white;
-	width: 90%;
-	padding: 0.25rem;
-	font-size: 1.3rem;
-}
-
-aside form button {
-	border: none;
-	background: none;
-	font-size: 2.5rem;
-	margin: 0 0.25rem;
-}
-
-aside .current {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	justify-content: space-evenly;
-	align-items: center;
-	text-align: center;
-}
-
-aside .current span {
-	font-size: 5rem;
-}
-
-aside .current h1 {
-	font-weight: 700;
-	font-size: 4rem;
-}
-
-aside .current .day {
-	font-size: 2rem;
-	font-weight: 700;
-}
-
-aside .current div > * {
-	margin: 0.5rem 0;
-	font-weight: 500;
-	font-size: 1.2rem;
-}
-
-main {
-	justify-content: space-evenly;
-	align-items: center;
-	width: 70%;
-	display: flex;
-	padding: 0 10%;
-	flex-direction: column;
-	background-color: var(--primaryColor);
-	height: 100vh;
-}
-/* Weather Week */
-.weather-week {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 100%;
-}
-
-/* Card */
-.card {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	text-align: center;
-	width: 100px;
-	height: 150px;
-	background-color: var(--secondaryColor);
-	font-weight: 500;
-	border-radius: 0.25rem;
-	margin: 0 0.25rem;
-}
-
-.card p {
-	font-size: 1.2rem;
-}
-
-/* Highlight */
-.highlight {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	background-color: var(--secondaryColor);
-	height: 100%;
-	width: 100%;
-	padding: 1rem;
-	border-radius: 0.25rem;
-}
-
-.highlight p {
-	font-weight: 700;
-	color: var(--grey);
-	font-size: 1rem;
-}
-
-.highlight h3 {
-	margin: auto;
-	font-size: 4rem;
-}
-
-/* Weather Today */
-.weather-today {
-	width: 100%;
-	height: 50%;
-}
-.weather-today .grid {
-	display: grid;
-	height: 100%;
-	grid-template-columns: repeat(2, 1fr);
-	align-items: center;
-	justify-content: center;
-	gap: 1rem;
-	margin: 1rem 0;
-}
-
-.weather-today .grid .card {
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-}
-
-.weather-today .grid .card p {
-	font-size: 4rem;
+@layer components {
+	.location {
+		/* background-color: theme('colors.white'); */
+		/* border-radius: theme('borderRadius.lg'); */
+		/* padding: theme('spacing.6'); */
+		/* border-radius: theme('borderRadius.sm'); */
+		/* border-color: theme('borderColor.white'); */
+		border-width: theme('borderWidth.2');
+		padding: theme('padding.4');
+		width: theme('width.11/12');
+		margin-left: theme('margin.auto');
+		margin-right: theme('margin.auto');
+		/* box-shadow: theme('boxShadow.xl'); */
+	}
 }
